--- a/app/src/main/res/layout/grid_movies_fragment.xml
+++ b/app/src/main/res/layout/grid_movies_fragment.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorAccentLight">
@@ -29,5 +30,18 @@
         android:layout_marginRight="@dimen/margin_right_movie_grid_item"
         android:gravity="center"
         android:numColumns="auto_fit"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:id="@+id/tv_main_grid_empty"
+        android:text="@string/empty"
+        android:textSize="@dimen/empty_grid"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_centerInParent="true"
+        android:visibility="invisible"
+        />
 
 </RelativeLayout>
