--- a/app/src/main/res/layout-sw600dp/grid_movies_fragment.xml
+++ b/app/src/main/res/layout-sw600dp/grid_movies_fragment.xml
@@ -16,16 +16,14 @@
         android:layout_marginRight="@dimen/margin_right_movie_grid_item"/>
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
+        style="@style/emptyRecyclerView"
         android:id="@+id/tv_main_grid_empty"
-        tools:text="@string/empty"
-        android:textSize="@dimen/empty_grid"
+        android:text="@string/empty"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_centerInParent="true"
         android:visibility="invisible"
+        tools:visibility="visible"
         />
 
 </RelativeLayout>
