--- a/app/src/main/res/layout/grid_movies_fragment.xml
+++ b/app/src/main/res/layout/grid_movies_fragment.xml
@@ -32,16 +32,14 @@
         android:numColumns="auto_fit"/>
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
+        style="@style/emptyRecyclerView"
         android:id="@+id/tv_main_grid_empty"
         android:text="@string/empty"
-        android:textSize="@dimen/empty_grid"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_centerInParent="true"
         android:visibility="invisible"
+        tools:visibility="visible"
         />
 
 </RelativeLayout>
