--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -7,7 +7,7 @@
 <ImageView
            android:id="@+id/iv_list_item_poster"
            android:layout_width="match_parent"
-           android:layout_height="wrap_content"
+           android:layout_height="@dimen/grid_list_item_height"
            android:adjustViewBounds="true"
            android:orientation="vertical"
            android:scaleType="centerCrop"/>
